--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -3,3 +3,17 @@
   height: 100px;
   border-radius: 50%;
 }
+
+span {
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+span:last-child {
+  margin-right: 0;
+}
+
+.selectedPage {
+  font-weight: bold;
+  color: red
+}
