--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -13,6 +13,10 @@ span:last-child {
   margin-right: 0;
 }
 
+span:first-child {
+  margin-left: 10px;
+}
+
 .selectedPage {
   font-weight: bold;
   color: red
