--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -7,3 +7,23 @@
   width: 100%;
   border-radius: 50%;
 }
+
+.contact {
+  padding-left: 10px;
+}
+
+.profileInfo {
+  margin-bottom: 10px;
+}
+
+.profileInfo:last-child {
+  margin-bottom: 0;
+}
+
+.profileJob {
+  margin-bottom: 10px;
+}
+
+.profileJob:last-child {
+  margin-bottom: 0;
+}
